branches/wip/Archive/80a238329257a9956b2700dd9465631e-6ab9b228948357859c16328023302192/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:14:49: error: conversion from '<unresolved overloaded function type>' to non-scalar type 'std::function<void(std::vector<int>)>' requested
     std::function<void(std::vector<int>)> li2 = _li;
                                                 ^
